<resources>
    <string name="app_name">CS213-Project-5</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="donuts">Donuts</string>
    <string name="coffee">Coffee</string>
    <string name="sandwiches">Sandwiches</string>
    <string name="current_order">Current Order</string>
    <string name="all_orders">All Orders</string>
    <string name="subtotal">SubTotal:</string>
    <string name="add_to_order">Add to Order</string>
    <string name="order_donuts">Order Donuts</string>
    <string name="irish_cream">Irish Cream</string>
    <string name="caramel">Caramel</string>
    <string name="french_vanilla">French Vanilla</string>
    <string name="mocha">Mocha</string>
    <string name="sweet_cream">Sweet Cream</string>
    <string name="order_coffee">Order Coffee</string>
    <string name="order_sandwiches">Order Sandwiches</string>
    <string name="bagel">Bagel</string>
    <string name="wheat_toast">Wheat Toast</string>
    <string name="sour_dough">Sour Dough</string>
    <string name="beef">Beef</string>
    <string name="fish">Fish</string>
    <string name="chicken">Chicken</string>
    <string name="cheese">Cheese</string>
    <string name="lettuce">Lettuce</string>
    <string name="tomato">Tomato</string>
    <string name="onion">Onion</string>
    <string name="sales_tax">Sales Tax:</string>
    <string name="total_amount">Total Amount:</string>
    <string name="remove_item">Remove Item</string>
    <string name="submit_order">Submit Order</string>
    <string name="donut_name">Donut Name</string>
    <string name="order">Order</string>
    <string name="remove_selected_order">Remove Selected Order</string>
</resources>