<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".DonutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_donuts"
            android:textAlignment="center"
            android:textSize="48sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:background="?android:attr/listDivider" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/donut_options"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_weight="0" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/donutSubtotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/subtotal" />

            <Button
                android:id="@+id/donut_add_to_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_to_order" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>